Missing variants of \vbox_set_split_to_ht:NNn

--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -593,16 +593,19 @@
 % \end{function}
 %
 %
-% \begin{function}[updated = 2011-10-22]{\vbox_set_split_to_ht:NNn}
+% \begin{function}[updated = 2018-12-29]
+%   {
+%     \vbox_set_split_to_ht:NNn, \vbox_set_split_to_ht:cNn,
+%     \vbox_set_split_to_ht:Ncn, \vbox_set_split_to_ht:ccn,
+%     \vbox_gset_split_to_ht:NNn, \vbox_gset_split_to_ht:cNn,
+%     \vbox_gset_split_to_ht:Ncn, \vbox_gset_split_to_ht:ccn
+%   }
 %   \begin{syntax}
 %      \cs{vbox_set_split_to_ht:NNn} \meta{box_1} \meta{box_2} \Arg{dimexpr}
 %   \end{syntax}
 %   Sets \meta{box_1} to contain material to the height given by the
 %   \meta{dimexpr} by removing content from the top of \meta{box_2}
 %   (which must be a vertical box).
-%   \begin{texnote}
-%     This is the \TeX{} primitive \tn{vsplit}.
-%   \end{texnote}
 % \end{function}
 %
 % \begin{function}{\vbox_unpack:N, \vbox_unpack:c}
@@ -1542,13 +1545,27 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\vbox_set_split_to_ht:NNn}
+% \begin{macro}
+%   {
+%     \vbox_set_split_to_ht:NNn, \vbox_set_split_to_ht:cNn,
+%     \vbox_set_split_to_ht:Ncn, \vbox_set_split_to_ht:ccn,
+%     \vbox_gset_split_to_ht:NNn, \vbox_gset_split_to_ht:cNn,
+%     \vbox_gset_split_to_ht:Ncn, \vbox_gset_split_to_ht:ccn,
+%   }
 % \testfile*
 %   Splitting a vertical box in two.
 %    \begin{macrocode}
 \__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_split_to_ht:NNn #1#2#3
   { \tex_setbox:D #1 \tex_vsplit:D #2 to \@@_dim_eval:n {#3} }
+\cs_generate_variant:Nn \vbox_set_split_to_ht:NNn { c , Nc , cc }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
+\cs_new_protected:Npn \vbox_gset_split_to_ht:NNn #1#2#3
+  {
+    \tex_global:D \tex_setbox:D #1
+      \tex_vsplit:D #2 to \@@_dim_eval:n {#3}
+  }
+\cs_generate_variant:Nn \vbox_gset_split_to_ht:NNn { c , Nc , cc }
 %    \end{macrocode}
 % \end{macro}
 %
