Correct error message for \iow_allow_break:

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1443,14 +1443,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_allow_break:
   {
-    \__kernel_msg_error:nnnn { kernel } { iow-allow-break }
+    \__kernel_msg_error:nnnn { kernel } { iow-indent }
       { \iow_wrap:nnnN } { \iow_allow_break: }
   }
 \cs_new:Npx \@@_allow_break: { \c_@@_wrap_allow_break_marker_tl }
 \cs_new:Npn \@@_allow_break_error:
   {
-    \__kernel_msg_expandable_error:nnnn { kernel } { iow-allow-break }
-      { \iow_wrap:nnnN } { \iow_allow_break:n }
+    \__kernel_msg_expandable_error:nnnn { kernel } { iow-indent }
+      { \iow_wrap:nnnN } { \iow_allow_break: }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2421,8 +2421,8 @@
   { Only~#1 (arg~1)~allows~#2 }
   {
     The~command~#2 can~only~be~used~in~messages~
-    which~will~be~wrapped~using~#1.~
-    It~was~called~with~argument~'#3'.
+    which~will~be~wrapped~using~#1.
+    \tl_if_empty:nF {#3} { ~ It~was~called~with~argument~'#3'. }
   }
 %    \end{macrocode}
 %
