Fully expand \current@color in all cases (fixes #510)

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3drivers.dtx Copyright(C) 2011-2018 The LaTeX3 Project
+%% File: l3drivers.dtx Copyright(C) 2011-2019 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -638,8 +638,8 @@
                    }
               }
               {
-                \exp_after:wN \@@_color_pickup:w
-                  \current@color \q_stop #1
+                \exp_last_unbraced:Nx \@@_color_pickup:w
+                  { \current@color } \q_stop #1
               }
           }
         \cs_new_protected:Npn \@@_color_pickup:w #1 ~ #2 \q_stop #3
