--- a/l3kernel/l3syntax-changes.tex
+++ b/l3kernel/l3syntax-changes.tex
@@ -1,6 +1,6 @@
 \iffalse meta-comment
 
-File l3syntax-changes.tex Copyright (C) 2011-2012,2017,2018 The LaTeX3 Project
+File l3syntax-changes.tex Copyright (C) 2011-2012,2017-2019 The LaTeX3 Project
 
 It may be distributed and/or modified under the conditions of the
 LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -30,7 +30,7 @@ The released version of this bundle is available from CTAN.
         {latex-team@latex-project.org}%
     }%
 }
-\date{Released 2018-12-12}
+\date{Released 2019-01-01}
 
 \newcommand{\TF}{\textit{(TF)}}
 
