--- a/l3kernel/source3.tex
+++ b/l3kernel/source3.tex
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: source3.tex Copyright (C) 1990-2012,2017 The LaTeX3 Project
+%% File: source3.tex Copyright (C) 1990-2012,2017-2019 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -51,7 +51,7 @@
          {latex-team@latex-project.org}%
    }%
 }
-\date{Released 2018-12-12}
+\date{Released 2019-01-01}
 
 \pagenumbering{roman}
 \maketitle
