Define UTF-8 chars for mixed case chaning (fixes #514)

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -4443,6 +4443,22 @@
           \exp_after:wN \@@_tmp:w \l_@@_internal_a_tl
           \@@_loop:nn
         }
+      \cs_set_protected:Npn \@@_tmp:nnnn #1#2#3#4#5
+        {
+          \tl_const:cx
+            {
+              c_@@_ #1 _case_
+              \char_generate:nn {#2} { 12 }
+              \char_generate:nn {#3} { 12 }
+              _tl
+            }
+            {
+              \exp_after:wN \exp_after:wN \exp_after:wN
+                \exp_not:N \char_generate:nn {#4} { 13 }
+              \exp_after:wN \exp_after:wN \exp_after:wN
+                \exp_not:N \char_generate:nn {#5} { 13 }
+            }
+        }
       \cs_set_protected:Npn \@@_tmp:w #1#2#3#4#5#6#7#8
         {
           \tl_const:cx
@@ -4458,19 +4474,8 @@
               \exp_after:wN \exp_after:wN \exp_after:wN
                 \exp_not:N \char_generate:nn {#6} { 13 }
             }
-          \tl_const:cx
-            {
-              c_@@_upper_case_
-              \char_generate:nn {#5} { 12 }
-              \char_generate:nn {#6} { 12 }
-              _tl
-            }
-            {
-              \exp_after:wN \exp_after:wN \exp_after:wN
-                \exp_not:N \char_generate:nn {#1} { 13 }
-              \exp_after:wN \exp_after:wN \exp_after:wN
-                \exp_not:N \char_generate:nn {#2} { 13 }
-            }
+          \@@_tmp:nnnn { upper } {#5} {#6} {#1} {#2}
+          \@@_tmp:nnnn { mixed } {#5} {#6} {#1} {#2}
         }
       \@@_loop:nn
         { 00C0 } { 00E0 }
