--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -91,7 +91,7 @@
 %     $\operatorname{asinh} x$, $\operatorname{acosh} x$,
 %     $\operatorname{atanh} x$, $\operatorname{acoth} x$,
 %     $\operatorname{asech} x$, $\operatorname{acsch} x$.
-%   \item Extrema: $\max(x,y,\ldots)$, $\min(x,y,\ldots)$,
+%   \item Extrema: $\max(x_{1},x_{2},\ldots)$, $\min(x_{1},x_{2},\ldots)$,
 %     $\operatorname{abs}(x)$.
 %   \item Rounding functions ($n=0$ by default, $t=\nan$ by default):
 %     $\operatorname{trunc}(x,n)$ rounds towards zero,
