--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -107,7 +107,7 @@
 %     $\operatorname{atand} x$, $\operatorname{acotd} x$,
 %     $\operatorname{asecd} x$, $\operatorname{acscd} x$ giving a result
 %     in degrees.
-%   \item Extrema: $\max(x,y,\ldots)$, $\min(x,y,\ldots)$,
+%   \item Extrema: $\max(x_{1},x_{2},\ldots)$, $\min(x_{1},x_{2},\ldots)$,
 %     $\operatorname{abs}(x)$.
 %   \item Rounding functions ($n=0$ by default, $t=\nan$ by default):
 %     $\operatorname{trunc}(x,n)$ rounds towards zero,
