Formatting (see #515) [ci skip]

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -94,13 +94,15 @@
 %   \item Extrema: $\max(x_{1},x_{2},\ldots)$, $\min(x_{1},x_{2},\ldots)$,
 %     $\operatorname{abs}(x)$.
 %   \item Rounding functions ($n=0$ by default, $t=\nan$ by default):
-%     $\operatorname{trunc}(x,n)$ rounds towards zero,
-%     $\operatorname{floor}(x,n)$ rounds towards~$-\infty$,
-%     $\operatorname{ceil}(x,n)$ rounds towards~$+\infty$,
-%     $\operatorname{round}(x,n,t)$ rounds to the closest value, with
+%     \begin{itemize}
+%     \item $\operatorname{trunc}(x,n)$ rounds towards zero,
+%     \item $\operatorname{floor}(x,n)$ rounds towards~$-\infty$,
+%     \item $\operatorname{ceil}(x,n)$ rounds towards~$+\infty$,
+%     \item $\operatorname{round}(x,n,t)$ rounds to the closest value, with
 %     ties rounded to an even value by default, towards zero if $t=0$,
-%     towards $+\infty$ if $t>0$ and towards $-\infty$ if $t<0$.  And
-%     \emph{(not yet)} modulo, and \enquote{quantize}.
+%     towards $+\infty$ if $t>0$ and towards $-\infty$ if $t<0$. 
+%     \end{itemize}
+%     And \emph{(not yet)} modulo, and \enquote{quantize}.
 %   \item Random numbers: $\mathop{rand}()$, $\mathop{randint}(m,n)$.
 %   \item Constants: \texttt{pi}, \texttt{deg} (one degree in radians).
 %   \item Dimensions, automatically expressed in points, \emph{e.g.},
