Missed saving a file [ci skip]

--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -109,7 +109,9 @@
 %     in degrees.
 %   \item Extrema: $\max(x_{1},x_{2},\ldots)$, $\min(x_{1},x_{2},\ldots)$,
 %     $\operatorname{abs}(x)$.
-%   \item Rounding functions ($n=0$ by default, $t=\nan$ by default:
+%   \item Rounding functions, controlled by two optional
+%     values,  $n$ (number of places, $0$ by default) and
+%       $t$ (behavior on a tie, $\nan$ by default):
 %     \begin{itemize}
 %     \item $\operatorname{trunc}(x,n)$ rounds towards zero,
 %     \item $\operatorname{floor}(x,n)$ rounds towards~$-\infty$,
