Update doc about what XeTeX can do given the new primitives [ci skip]

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -139,10 +139,11 @@
 %     \item $8$ (math subscript)
 %     \item $11$ (letter)
 %     \item $12$ (other)
-%     \item $13$ (active) (not \XeTeX{})
+%     \item $13$ (active)
 %   \end{itemize}
 %   and other values raise an error. The \meta{charcode} may be any one valid
 %   for the engine in use.
+%   Active characters cannot be generated in older versions of \XeTeX{}.
 % \end{function}
 %
 % \begin{variable}[added = 2011-09-05]{\c_catcode_other_space_tl}
