--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -731,9 +731,7 @@
 %     \emph{only} the Latin alphabet characters A--Z are case-folded
 %     (\emph{i.e.}~the \textsc{ascii} range which coincides with
 %     \textsc{utf-8}). Full \textsc{utf-8} support is available with both
-%     \XeTeX{} and \LuaTeX{}, subject only to the fact that \XeTeX{} in
-%     particular has issues with characters of code above hexadecimal
-%     $0\mathrm{xFFFF}$ when interacting with \cs{tl_to_str:n}.
+%     \XeTeX{} and \LuaTeX{}.
 %   \end{texnote}
 % \end{function}
 %
