Document that \box_use functions cause errors for undefined variables

--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -133,7 +133,8 @@
 %     \cs{box_use:N} \meta{box}
 %   \end{syntax}
 %   Inserts the current content of the \meta{box} onto the current
-%   list for typesetting.
+%   list for typesetting. An error is raised if the variable does
+%   not exist or if it is invalid.
 %   \begin{texnote}
 %     This is the \TeX{} primitive \tn{copy}.
 %   \end{texnote}
@@ -144,7 +145,10 @@
 %     \cs{box_use_drop:N} \meta{box}
 %   \end{syntax}
 %   Inserts the current content of the \meta{box} onto the current
-%   list for typesetting. The \meta{box} is then cleared at the group level the
+%   list for typesetting. An error is raised if the variable does
+%   not exist or if it is invalid.
+%
+%   The \meta{box} is then cleared at the group level the
 %   box was set at, \emph{i.e.}~the current content is \enquote{dropped} entirely.
 %   For example, with
 %   \begin{verbatim}
