Implement \ior_map_variable:NNn (and ior_str version)

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1014,6 +1014,37 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\ior_map_variable:NNn, \ior_str_map_variable:NNn}
+% \begin{macro}{\@@_map_variable:NNNn}
+% \begin{macro}{\@@_map_variable_loop:NNNn}
+%   Since the \TeX{} primitive (\tn{read} or \tn{readline}) assigns the
+%   tokens read in the same way as a token list assignment, we simply
+%   call the appropriate primitive.  The end-of-loop is checked using
+%   the primitive conditional for speed.
+%    \begin{macrocode}
+\cs_new_protected:Npn \ior_map_variable:NNn
+  { \@@_map_variable:NNNn \ior_get:NN }
+\cs_new_protected:Npn \ior_str_map_variable:NNn
+  { \@@_map_variable:NNNn \ior_str_get:NN }
+\cs_new_protected:Npn \@@_map_variable:NNNn #1#2#3#4
+  {
+    \ior_if_eof:NF #2 { \@@_map_variable_loop:NNNn #1#2#3 {#4} }
+    \prg_break_point:Nn \ior_map_break: { }
+  }
+\cs_new_protected:Npn \@@_map_variable_loop:NNNn #1#2#3#4
+  {
+    #1 #2 #3
+    \if_eof:w #3
+      \exp_after:wN \ior_map_break:
+    \fi:
+    #4
+    \@@_map_variable_loop:NNNn #1#2#3 {#4}
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Output operations}
 %
 %    \begin{macrocode}
