Speed up UnicodeData loop by using \ior_map_variable:NNn

--- a/l3kernel/l3unicode.dtx
+++ b/l3kernel/l3unicode.dtx
@@ -130,12 +130,12 @@
             \fi:
           \fi:
         }
-      \ior_map_inline:Nn \g_@@_data_ior
+      \ior_map_variable:NNn \g_@@_data_ior \l_@@_tmpa_tl
         {
-          \cs_set_nopar:Npn \l_@@_tmpa_tl {#1}
-          \reverse_if:N \if_meaning:w \l_@@_tmpa_tl \c_space_tl
-            \@@_data_auxi:w #1 \q_stop
+          \if_meaning:w \l_@@_tmpa_tl \c_space_tl
+            \exp_after:wN \ior_map_break:
           \fi:
+          \exp_after:wN \@@_data_auxi:w \l_@@_tmpa_tl \q_stop
         }
       \ior_close:N \g_@@_data_ior
 %    \end{macrocode}
@@ -228,7 +228,7 @@
             }
         }
       \ior_close:N \g_@@_data_ior
-   \group_end:
+    \group_end:
   }
 %    \end{macrocode}
 % For the $8$-bit engines, the above is skipped but there is still some
