--- a/l3kernel/l3unicode.dtx
+++ b/l3kernel/l3unicode.dtx
@@ -104,7 +104,7 @@
             {
               \exp_not:N \tex_Ucharcat:D
                 #1 ~
-                \tex_catcode:D #1 ~
+                \tex_catcode:D #1
             }
         } 
 %    \end{macrocode}
