Track down a space properly in l3unicode
The data file for case folding instructs to fold some code points to
a sequence of 1,2,3 code points (given by hex numbers).  In the case
of 3 hex numbers the parsing code ended up with a space at the end of
the third number

--- a/l3kernel/l3unicode.dtx
+++ b/l3kernel/l3unicode.dtx
@@ -104,7 +104,7 @@
             {
               \exp_not:N \tex_Ucharcat:D
                 #1 ~
-                \tex_catcode:D #1
+                \tex_catcode:D #1 ~
             }
         } 
 %    \end{macrocode}
@@ -169,7 +169,7 @@
               \@@_generate:n { "#2 }
               \@@_generate:n { "#3 }
               \tl_if_blank:nF {#4}
-                { \@@_generate:n { "#4 } }
+                { \@@_generate:n { \int_value:w "#4 } }
             }
         }
       \ior_str_map_inline:Nn \g_@@_data_ior
