some chk variants
(needed in upcoming commits)

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1771,7 +1771,7 @@
 %
 % \begin{macro}
 %   {\@@_check-declarations_on:, \@@_check-declarations_off:}
-% \begin{macro}{\__kernel_chk_var_exist:N}
+% \begin{macro}{\__kernel_chk_var_exist:N,\__kernel_chk_var_exist:c, \__kernel_chk_var_exist:NT}
 % \begin{macro}{\__kernel_chk_cs_exist:N, \__kernel_chk_cs_exist:c}
 % \begin{macro}{\__kernel_chk_var_local:N, \__kernel_chk_var_global:N}
 % \begin{macro}{\__kernel_chk_var_scope:NN}
@@ -1794,6 +1794,16 @@
           {
             \@@_suspended:T \use_none:nnn
             \cs_if_exist:NF ##1
+              {
+                \__kernel_msg_error:nnx { kernel } { non-declared-variable }
+                  { \token_to_str:N ##1 }
+              }
+          }
+        \cs_set_protected:Npn \__kernel_chk_var_exist:NT ##1 ##2
+          {
+            \@@_suspended:T \use_none:nnn
+            \cs_if_exist:NTF ##1
+              { ##2 }
               {
                 \__kernel_msg_error:nnx { kernel } { non-declared-variable }
                   { \token_to_str:N ##1 }
@@ -1829,6 +1839,7 @@
     \exp_args:Nc \cs_set_protected:Npn { @@_check-declarations_off: }
       {
         \cs_set_protected:Npn \__kernel_chk_var_exist:N ##1 { }
+        \cs_set_protected:Npn \__kernel_chk_var_exist:NT ##1##2 { ##2 }
         \cs_set_protected:Npn \__kernel_chk_cs_exist:N ##1 { }
         \cs_set_protected:Npn \__kernel_chk_var_local:N ##1 { }
         \cs_set_protected:Npn \__kernel_chk_var_global:N ##1 { }
@@ -1836,6 +1847,10 @@
       }
     \cs_set_protected:Npn \__kernel_chk_cs_exist:c
       { \exp_args:Nc \__kernel_chk_cs_exist:N }
+    \cs_set_protected:Npn \__kernel_chk_var_exist:c
+      { \exp_args:Nc \__kernel_chk_var_exist:N }
+    \cs_set_protected:Npn \__kernel_chk_var_exist:cT
+      { \exp_args:Nc \__kernel_chk_var_exist:NT }
     \tex_ifodd:D \l@expl@check@declarations@bool
       \use:c { @@_check-declarations_on: }
     \else:
