--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1472,8 +1472,17 @@
 %    \end{macrocode}
 %    We hand-code this for some speed gain:
 %    \begin{macrocode}
-%\cs_generate_variant:Nn \int_use:N { c }
-\cs_new:Npn \int_use:c #1 { \tex_the:D \cs:w #1 \cs_end: }
+\__kernel_if_debug:TF
+  {
+    \cs_new:Npn \int_use:c #1
+      {
+        \__kernel_chk_var_exist:c {#1}
+        \tex_the:D \cs:w #1 \cs_end:
+      }
+  }
+  {
+    \cs_new:Npn \int_use:c #1 { \tex_the:D \cs:w #1 \cs_end: }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
