new \cs_use:N/c
with chking, of course

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -2806,6 +2806,29 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\cs_use:N, \cs_use:c}[EXP,added=2019-01-13]
+%    \begin{macrocode}
+\__kernel_if_debug:TF
+  {
+    \cs_set:Npn \cs_use:N #1
+      {
+        \__kernel_chk_cs_exist:N #1
+        #1
+      }
+    \cs_set:Npn \cs_use:c #1
+      {
+        \__kernel_chk_cs_exist:c {#1}
+        \cs:w #1 \cs_end:
+      }
+  }
+  {
+    \cs_set:Npn \cs_use:N #1 { #1 }
+    \cs_set:Npn \cs_use:c #1 { \cs:w #1 \cs_end: }
+  }
+%    \end{macrocode}
+% \end{macro}
+
+%
 % \subsection{Preliminaries for new functions}
 %
 %    We provide two kinds of functions that can be used to define
