--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1,6 +1,8 @@
 % \iffalse meta-comment
 %
-%% File: l3doc.dtx Copyright (C) 1990-2019 The LaTeX3 project
+%% File: l3doc.dtx
+%
+% Copyright (C) 1990-2019 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
