--- a/l3kernel/l3docstrip.dtx
+++ b/l3kernel/l3docstrip.dtx
@@ -1,6 +1,8 @@
 % \iffalse
 %
-%% File l3dosctrip.dtx Copyright (C) 2012,2014-2019 The LaTeX3 Project
+%% File l3dosctrip.dtx
+%
+% Copyright (C) 2012,2014-2019 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
