Standardise copyright lines (l3packages)

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1,10 +1,10 @@
 % \iffalse meta-comment
 %
-%% File: xparse.dtx (C) Copyright 1999 Frank Mittelbach, Chris Rowley,
-%%                      David Carlisle
-%%                  (C) Copyright 2004-2008 Frank Mittelbach,
-%%                      The LaTeX3 Project
-%%                  (C) Copyright 2009-2018 The LaTeX3 Project
+%% File: xparse.dtx
+%
+% Copyright (C) 1999 Frank Mittelbach, Chris Rowley, David Carlisle
+%           (C) 2004-2008 Frank Mittelbach, The LaTeX3 Project
+%           (C) 2009-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
