--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -1,6 +1,8 @@
 % \iffalse meta-comment
 %
-%% File: l3keys2e.dtx (C) Copyright 2009,2011-2018 The LaTeX3 Project
+%% File: l3keys2e.dtx
+%
+% Copyright (C) 2009,2011-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
