--- a/l3experimental/l3draw/l3draw-points.dtx
+++ b/l3experimental/l3draw/l3draw-points.dtx
@@ -1,6 +1,8 @@
 % \iffalse meta-comment
 %
-%% File: l3draw-points.dtx Copyright(C) 2018 The LaTeX3 Project
+%% File: l3draw-points.dtx
+%
+% Copyright (C) 2018,2019 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
