--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1,7 +1,9 @@
 % \iffalse
 %
-%% File: l3galley.dtx Copyright (C) 1999-2001, 2004-2009 Frank Mittelbach
-%%                              (C) 2010-2018 The LaTeX3 Project
+%% File: l3galley.dtx
+%
+% Copyright (C) 1999-2001,2004-2009 Frank Mittelbach
+%           (C) 2010-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
