--- a/l3experimental/xgalley/xgalley.dtx
+++ b/l3experimental/xgalley/xgalley.dtx
@@ -1,7 +1,9 @@
 % \iffalse
 %
-%% File: xgalley.dtx Copyright (C) 1999-2001, 2004-2009 Frank Mittelbach
-%%                             (C) 2010-2012,2014,2016-2018 The LaTeX3 Project
+%% File: xgalley.dtx
+%
+% Copyright (C) 1999-2001,2004-2009 Frank Mittelbach
+%           (C) 2010-2012,2014,2016-2019 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
