--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1675,7 +1675,7 @@
   {
     \cs_new:Npn \dim_use:c #1
       {
-        \__kernel_chk_var_exist:c {#1}
+        \__kernel_chk_exp_var_exist:c {#1}
         \tex_the:D \cs:w #1 \cs_end:
       }
   }
@@ -2030,7 +2030,7 @@
   {
     \cs_new:Npn \skip_use:c #1
       {
-        \__kernel_chk_var_exist:c {#1}
+        \__kernel_chk_exp_var_exist:c {#1}
         \tex_the:D \cs:w #1 \cs_end:
       }
   }
@@ -2310,7 +2310,7 @@
   {
     \cs_new:Npn \muskip_use:c #1
       {
-        \__kernel_chk_var_exist:c {#1}
+        \__kernel_chk_exp_var_exist:c {#1}
         \tex_the:D \cs:w #1 \cs_end:
       }
   }
