Correct a var name

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2193,7 +2193,7 @@
 \exp_args:Nno \use:nn
   { \cs_new_protected:Npn \@@_get_do:w #1 }
   { \c_@@_marker_tl }
-  { \tl_set:No \l_@@_internal_a_tl {#1} }
+  { \tl_set:No \l_@@_internal_tl {#1} }
 \cs_new_protected:Npn \@@_set_from:nNn #1#2#3
   {
     \group_begin:
@@ -2204,7 +2204,7 @@
       \exp_after:wN \prg_do_nothing:
         \tex_input:D #1 \scan_stop:
     \exp_args:NNNo \group_end:
-    \tl_set:Nn #2 \l_@@_internal_a_tl
+    \tl_set:Nn #2 \l_@@_internal_tl
   }
 %    \end{macrocode}
 % \end{macro}
