--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1820,7 +1820,7 @@
             \@@_suspended:T \use_none:nnn
             \cs_if_exist:NF ##1
               {
-                \__kernel_msg_error:nnx { kernel } { command-not-defined }
+                \__kernel_msg_error:nnx { kernel } { command-erroneous }
                   { \token_to_str:N ##1 }
               }
           }
@@ -1830,7 +1830,7 @@
             \cs_if_exist:NF ##1
               {
                 \__kernel_msg_expandable_error:nnn
-                  { kernel } { command-not-defined } { ##1 }
+                  { kernel } { command-erroneous } { ##1 }
               }
           }
         \cs_set:Npn \__kernel_chk_exp_var_exist:NTF ##1 ##2 ##3
@@ -1839,6 +1839,7 @@
             \cs_if_exist:NTF ##1
               { ##2 }
               {
+                ##3
                 \__kernel_msg_expandable_error:nnn
                   { kernel } { variable-not-defined } { ##1 }
                 ##3
