bruno-suggested improvements

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -751,6 +751,8 @@
 %   Unlike \cs{use:c}, these functions check for the existence of the control sequence
 %   when the \texttt{check-declarations} option is in effect.
 %   This affords a level of safety when testing.
+%   When checking, these functions consider \cs{relax} and \cs{scan_stop:} to be invalid
+%   and throw an error.
 % \end{function}
 %
 % \begin{function}[noTF, EXP, added = 2012-11-10]
@@ -1818,7 +1820,7 @@
             \@@_suspended:T \use_none:nnn
             \cs_if_exist:NF ##1
               {
-                \__kernel_msg_error:nnx { kernel } { command-not-defined }
+                \__kernel_msg_error:nnx { kernel } { command-erroneous }
                   { \token_to_str:N ##1 }
               }
           }
@@ -1828,27 +1830,31 @@
             \cs_if_exist:NF ##1
               {
                 \__kernel_msg_expandable_error:nnn
-                  { kernel } { command-not-defined } { ##1 }
+                  { kernel } { command-erroneous } { ##1 }
               }
           }
-        \cs_set:Npn \__kernel_chk_exp_var_exist:N ##1
+        \cs_set:Npn \__kernel_chk_exp_var_exist:NTF ##1 ##2 ##3
           {
-            \@@_suspended:T \use_none:nnn
-            \cs_if_exist:NF ##1
+            \@@_suspended:T \use_none:nnnn
+            \cs_if_exist:NTF ##1
+              { ##2 }
               {
+                ##3
                 \__kernel_msg_expandable_error:nnn
                   { kernel } { non-declared-variable } { ##1 }
               }
           }
         \cs_set:Npn \__kernel_chk_exp_var_exist:NT ##1 ##2
           {
-            \@@_suspended:T \use_none:nnnn
-            \cs_if_exist:NTF ##1
-              { ##2 }
-              {
-                \__kernel_msg_expandable_error:nnn
-                  { kernel } { non-declared-variable } { ##1 }
-              }
+            \__kernel_chk_exp_var_exist:NTF ##1 { ##2 } { }
+          }
+        \cs_set:Npn \__kernel_chk_exp_var_exist:NF ##1 ##2
+          {
+            \__kernel_chk_exp_var_exist:NTF ##1 { } { ##2 }
+          }
+        \cs_set:Npn \__kernel_chk_exp_var_exist:N ##1
+          {
+            \__kernel_chk_exp_var_exist:NTF ##1 { } { }
           }
         \cs_set_protected:Npn \__kernel_chk_var_scope:NN
           {
@@ -1875,6 +1881,8 @@
         \cs_set:Npn \__kernel_chk_exp_cs_exist:N  ##1 { }
         \cs_set:Npn \__kernel_chk_exp_var_exist:N  ##1 { }
         \cs_set:Npn \__kernel_chk_exp_var_exist:NT ##1##2 { ##2 }
+        \cs_set:Npn \__kernel_chk_exp_var_exist:NF ##1##2 { }
+        \cs_set:Npn \__kernel_chk_exp_var_exist:NTF ##1##2##3 { ##2 }
         \cs_set_protected:Npn \__kernel_chk_var_local:N ##1 { }
         \cs_set_protected:Npn \__kernel_chk_var_global:N ##1 { }
         \cs_set_protected:Npn \__kernel_chk_var_scope:NN ##1##2 { }
@@ -1887,8 +1895,8 @@
       { \exp_args:Nc \__kernel_chk_exp_cs_exist:N }
     \cs_set:Npn \__kernel_chk_exp_var_exist:c
       { \exp_args:Nc \__kernel_chk_exp_var_exist:N }
-    \cs_set:Npn \__kernel_chk_exp_var_exist:cT
-      { \exp_args:Nc \__kernel_chk_exp_var_exist:NT }
+    \cs_set:Npn \__kernel_chk_exp_var_exist:cF
+      { \exp_args:Nc \__kernel_chk_exp_var_exist:NF }
     \tex_ifodd:D \l@expl@check@declarations@bool
       \use:c { @@_check-declarations_on: }
     \else:
@@ -2850,13 +2858,11 @@
   {
     \cs_set:Npn \cs_use:N #1
       {
-        \__kernel_chk_exp_cs_exist:N #1
-        #1
+        \exp:w \__kernel_chk_exp_cs_exist:N #1 \exp_after:wN \exp_end: #1
       }
     \cs_set:Npn \cs_use:c #1
       {
-        \__kernel_chk_exp_cs_exist:c {#1}
-        \cs:w #1 \cs_end:
+        \cs:w \__kernel_chk_exp_cs_exist:c {#1} #1 \cs_end:
       }
   }
   {
