--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1699,6 +1699,18 @@
     LaTeX~has~been~asked~to~use~a~control~sequence~'#1':\\
     this~has~not~been~defined~yet.
   }
+\__kernel_msg_new:nnnn { kernel } { command-erroneous }
+  { Control~sequence~#1~undefined~or~invalid. }
+  {
+    \c_@@_coding_error_text_tl
+    LaTeX~has~been~asked~to~use~a~control~sequence~'#1':\\
+    this~has~not~been~defined~yet~or~is~invalid.
+  }
+\__kernel_msg_new:nnn { kernel } { deprecated-command }
+  {
+    The~deprecated~command~'#2'~has~been~or~will~be~removed~on~#1.
+    \tl_if_empty:nF {#3} { ~Use~instead~'#3'. }
+  }
 \__kernel_msg_new:nnnn { kernel } { empty-search-pattern }
   { Empty~search~pattern. }
   {
