revert change to message
the change was more accurate but i didn't want to regenerate tlgs all over the place

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1820,7 +1820,7 @@
             \@@_suspended:T \use_none:nnn
             \cs_if_exist:NF ##1
               {
-                \__kernel_msg_error:nnx { kernel } { command-erroneous }
+                \__kernel_msg_error:nnx { kernel } { command-not-defined }
                   { \token_to_str:N ##1 }
               }
           }
@@ -1830,7 +1830,7 @@
             \cs_if_exist:NF ##1
               {
                 \__kernel_msg_expandable_error:nnn
-                  { kernel } { command-erroneous } { ##1 }
+                  { kernel } { command-not-defined } { ##1 }
               }
           }
         \cs_set:Npn \__kernel_chk_exp_var_exist:NTF ##1 ##2 ##3
