Fix l3auxdata for new \file_get:nnN

--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -681,12 +681,11 @@ Don't~ look~ here:~ check~ your~ console~ output!
 % \paragraph{Variables and variants}
 %
 %    \begin{macrocode}
-\cs_set:Nn \tl_gset_from_file_x:Nnn { \CatchFileEdef #1 {#3} {#2} }
-\cs_set:Nn \tl_gset_from_file:Nnn   { \CatchFileDef  #1 {#3} {#2} }
-\cs_generate_variant:Nn \tl_gset_from_file_x:Nnn {c}
 
 \tl_new:N \l_auxdata_filename_tl
 \tl_new:N \g_@@_cache_tl
+
+\tl_new:N \l_@@_internal_tl
 
 \cs_generate_variant:Nn \prop_put:Nnn {Nxx}
 \cs_generate_variant:Nn \iow_now:Nn {cn,cx}
@@ -1005,10 +1004,13 @@ Don't~ look~ here:~ check~ your~ console~ output!
         \prop_get:NnNF \g_@@_tags_prop {#1} \l_auxdata_this_ccname_tl {\ERROR}
         \prop_get:NVNF \g_@@_cc_prop \l_auxdata_this_ccname_tl \l_auxdata_cc_tl {\ERROR}
 
-        \tl_gset_from_file_x:cnn
+        \file_get:nnN
+          { \@@_read_setup: \l_auxdata_cc_tl  }
           { g_auxdata_ #1 _ #2 _tl }
-          { \@@_read_setup: \l_auxdata_cc_tl }
+          \l_@@_internal_tl
+        \tl_gset_eq:cN
           { \l_auxdata_filename_tl }
+          \l_@@_internal_tl
       }
   }
 %    \end{macrocode}
