--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -852,6 +852,17 @@
 %
 % \section{Additions to \pkg{l3sys}}
 %
+% \begin{function}[added = 2019-01-16]{\sys_shell_get:nnN}
+%   \begin{syntax}
+%     \cs{sys_shell_get:nnN} \Arg{shell~command} \Arg{setup} \meta{tl~var}
+%   \end{syntax}
+%   Defines \meta{tl} to the text returned by the \meta{shell command}.
+%   Category codes may need to be set appropriately via the \meta{setup}
+%   argument. If shell escape is disabled, the \meta{tl~var} will be empty.
+%   Note that quote characters (|"|) \emph{cannot} be used inside the
+%   \meta{shell command}.
+% \end{function}
+%
 % \begin{variable}[added = 2018-05-02]{\c_sys_engine_version_str}
 %   The version string of the current engine, in the same form as
 %   given in the banner issued when running a job. For \pdfTeX{}
@@ -1219,21 +1230,6 @@
 %   of the underlying mapping implementation used here. The team are happy
 %   to add these to the kernel where they are well-documented
 %   (\emph{e.g.}~in Unicode Consortium or relevant government publications).
-%
-% \begin{function}[added = 2018-07-23]
-%   {
-%     \tl_set_from_shell:Nnn,  \tl_set_from_shell:cnn,
-%     \tl_gset_from_shell:Nnn, \tl_gset_from_shell:cnn
-%   }
-%   \begin{syntax}
-%     \cs{tl_set_from_shell:Nnn} \meta{tl~var} \Arg{setup} \Arg{shell~command}
-%   \end{syntax}
-%   Defines \meta{tl} to the text returned by the \meta{shell command}.
-%   Category codes may need to be set appropriately via the \meta{setup}
-%   argument. If shell escape is disabled, the \meta{tl~var} will be empty.
-%   Note that quote characters (|"|) \emph{cannot} be used inside the
-%   \meta{shell command}.
-% \end{function}
 %
 % \begin{function}[EXP, added = 2017-07-15]
 %   {
@@ -2904,6 +2900,63 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\l_@@_internal_tl}
+%    \begin{macrocode}
+\tl_new:N \l_@@_internal_tl
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\c_@@_marker_tl}
+%   The same idea as the marker for rescanning token lists.
+%    \begin{macrocode}
+\tl_const:Nx \c_@@_marker_tl { : \token_to_str:N : }
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\sys_shell_get:nnN}
+% \begin{macro}{\@@_get:nNn}
+% \begin{macro}{\@@_get_do:w}
+%   Setting using a shell is at this level just a slightly specialised file
+%   operation.
+%    \begin{macrocode}
+\cs_new_protected:Npn \sys_shell_get:nnN #1#2#3
+  {
+    \sys_if_shell:TF
+      {
+        \tl_set:Nn \l_@@_internal_tl {#1}
+        \tl_if_in:NnTF \l_@@_internal_tl { " }
+          {
+            \__kernel_msg_error:nnx
+              { kernel } { quote-in-shell } {#1}
+          }
+          { \@@_get:nNn { | " #1 " } #3 {#2} }
+      }
+      { #1 #2 { } }
+  }
+\cs_new_protected:Npn \@@_get:nNn #1#2#3
+  {
+    \group_begin:
+      \exp_args:No \tex_everyeof:D
+        { \c_@@_marker_tl \exp_not:N }
+      #3 \scan_stop:
+      \exp_after:wN \@@_get_do:w
+      \exp_after:wN \prg_do_nothing:
+        \tex_input:D #1 \scan_stop:
+    \exp_args:NNNo \group_end:
+    \tl_set:Nn #2 \l_@@_internal_tl
+  }
+\exp_args:Nno \use:nn
+  { \cs_new_protected:Npn \@@_get_do:w #1 }
+  { \c_@@_marker_tl }
+  { \tl_set:No \l_@@_internal_tl {#1} }
+\__kernel_msg_new:nnnn { kernel } { quote-in-shell }
+  { Quotes~in~shell~command~'#1'. }
+  { Shell~commands~cannot~contain~quotes~("). }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \begin{variable}{\c_sys_platform_str}
 %   Detecting the platform on \LuaTeX{} is easy: for other engines, we use
 %   the fact that the two common cases have special null files. It is possible
@@ -3103,62 +3156,6 @@
 \cs_new:Npn \@@_act_count_group:nn #1 #2
   { 2 + \tl_count_tokens:n {#2} + }
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
-%
-% \begin{macro}
-%   {
-%     \tl_set_from_shell:Nnn, \tl_set_from_shell:cnn,
-%     \tl_gset_from_shell:Nnn, \tl_gset_from_shell:cnn
-%   }
-% \begin{macro}{\@@_set_from_shell:NNnn}
-% \begin{macro}{\@@_set_from:nNNn}
-% \begin{macro}{\@@_set_from_do:w}
-%   Setting using a shell is at this level just a slightly specialised file
-%   operation.
-%    \begin{macrocode}
-\cs_new_protected:Npn \tl_set_from_shell:Nnn
-  { \@@_set_from_shell:NNnn \tl_set:Nn }
-\cs_generate_variant:Nn \tl_set_from_shell:Nnn { c }
-\cs_new_protected:Npn \tl_gset_from_shell:Nnn
-  { \@@_set_from_shell:NNnn \tl_gset:Nn }
-\cs_generate_variant:Nn \tl_gset_from_shell:Nnn { c }
-\cs_new_protected:Npn \@@_set_from_shell:NNnn #1#2#3#4
-  {
-    \sys_if_shell:TF
-      {
-        \tl_set:Nn \l_@@_internal_a_tl {#4}
-        \tl_if_in:NnTF \l_@@_internal_a_tl { " }
-          {
-            \__kernel_msg_error:nnx
-              { kernel } { quote-in-shell } {#4}
-          }
-          { \@@_set_from:nNNn { | " #4 " } #1 #2 {#3} }
-      }
-      { #1 #2 { } }
-  }
-\cs_new_protected:Npn \@@_set_from:nNNn #1#2#3#4
-  {
-    \group_begin:
-      \exp_args:No \tex_everyeof:D
-        { \c_@@_rescan_marker_tl \exp_not:N }
-      #4 \scan_stop:
-      \exp_after:wN \@@_from_file_do:w
-      \exp_after:wN \prg_do_nothing:
-        \tex_input:D #1 \scan_stop:
-    \exp_args:NNNo \group_end:
-    #2 #3 \l_@@_internal_a_tl
-  }
-\exp_args:Nno \use:nn
-  { \cs_new_protected:Npn \@@_from_file_do:w #1 }
-  { \c_@@_rescan_marker_tl }
-  { \tl_set:No \l_@@_internal_a_tl {#1} }
-\__kernel_msg_new:nnnn { kernel } { quote-in-shell }
-  { Quotes~in~shell~command~'#1'. }
-  { Shell~commands~cannot~contain~quotes~("). }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 %
